# iblqt

./: .buildinfo  .editorconfig  .gitignore  CHANGELOG.md  README.md  api.html  changelog.html  dev_guide.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  dev_guide.doctree
.doctrees/api/: iblqt.core.ColoredDataFrameTableModel.doctree  iblqt.core.DataFrameTableModel.doctree  iblqt.core.PathWatcher.doctree  iblqt.core.QAlyx.doctree  iblqt.core.RestrictedWebEnginePage.doctree  iblqt.core.Worker.doctree  iblqt.core.WorkerSignals.doctree  iblqt.core.doctree  iblqt.doctree  iblqt.resources.doctree  iblqt.resources.qCleanupResources.doctree  iblqt.resources.qInitResources.doctree  iblqt.tools.doctree  iblqt.tools.get_app.doctree  iblqt.tools.get_main_window.doctree  iblqt.tools.get_or_create_app.doctree  iblqt.tools.require_qt.doctree  iblqt.tools.run_as_qt_app.doctree  iblqt.widgets.AlyxLoginDialog.doctree  iblqt.widgets.AlyxLoginWidget.doctree  iblqt.widgets.AlyxUserEdit.doctree  iblqt.widgets.CheckBoxDelegate.doctree  iblqt.widgets.DiskSpaceIndicator.doctree  iblqt.widgets.RestrictedWebView.doctree  iblqt.widgets.SlideToggle.doctree  iblqt.widgets.StatefulButton.doctree  iblqt.widgets.ThresholdProgressBar.doctree  iblqt.widgets.UseTokenCache.doctree  iblqt.widgets.doctree
.github/workflows/: documentation.yaml  publish.yaml  testing.yaml
_modules/: index.html
_modules/iblqt/: core.html  resources.html  tools.html  widgets.html
_sources/api/: iblqt.core.ColoredDataFrameTableModel.rst.txt  iblqt.core.DataFrameTableModel.rst.txt  iblqt.core.PathWatcher.rst.txt  iblqt.core.QAlyx.rst.txt  iblqt.core.RestrictedWebEnginePage.rst.txt  iblqt.core.Worker.rst.txt  iblqt.core.WorkerSignals.rst.txt  iblqt.core.rst.txt  iblqt.resources.qCleanupResources.rst.txt  iblqt.resources.qInitResources.rst.txt  iblqt.resources.rst.txt  iblqt.rst.txt  iblqt.tools.get_app.rst.txt  iblqt.tools.get_main_window.rst.txt  iblqt.tools.get_or_create_app.rst.txt  iblqt.tools.require_qt.rst.txt  iblqt.tools.rst.txt  iblqt.tools.run_as_qt_app.rst.txt  iblqt.widgets.AlyxLoginDialog.rst.txt  iblqt.widgets.AlyxLoginWidget.rst.txt  iblqt.widgets.AlyxUserEdit.rst.txt  iblqt.widgets.CheckBoxDelegate.rst.txt  iblqt.widgets.DiskSpaceIndicator.rst.txt  iblqt.widgets.RestrictedWebView.rst.txt  iblqt.widgets.SlideToggle.rst.txt  iblqt.widgets.StatefulButton.rst.txt  iblqt.widgets.ThresholdProgressBar.rst.txt  iblqt.widgets.UseTokenCache.rst.txt  iblqt.widgets.rst.txt
api/: iblqt.core.ColoredDataFrameTableModel.html  iblqt.core.DataFrameTableModel.html  iblqt.core.PathWatcher.html  iblqt.core.QAlyx.html  iblqt.core.RestrictedWebEnginePage.html  iblqt.core.Worker.html  iblqt.core.WorkerSignals.html  iblqt.core.html  iblqt.html  iblqt.resources.html  iblqt.resources.qCleanupResources.html  iblqt.resources.qInitResources.html  iblqt.tools.get_app.html  iblqt.tools.get_main_window.html  iblqt.tools.get_or_create_app.html  iblqt.tools.html  iblqt.tools.require_qt.html  iblqt.tools.run_as_qt_app.html  iblqt.widgets.AlyxLoginDialog.html  iblqt.widgets.AlyxLoginWidget.html  iblqt.widgets.AlyxUserEdit.html  iblqt.widgets.CheckBoxDelegate.html  iblqt.widgets.DiskSpaceIndicator.html  iblqt.widgets.RestrictedWebView.html  iblqt.widgets.SlideToggle.html  iblqt.widgets.StatefulButton.html  iblqt.widgets.ThresholdProgressBar.html  iblqt.widgets.UseTokenCache.html  iblqt.widgets.html
docs/source/: api.rst  api_test.rst  conf.py  dev_guide.rst  index.rst
docs/source/_templates/: custom-class-template.rst
iblqt/: __init__.py  core.py  resources.py  tools.py  util.py  widgets.py
tests/: test_core.py  test_resources.py  test_tools.py  test_util.py  test_widget.py  test_widgets.py
