[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "iblqt"
version = "0.1.0"
description = "The International Brain Laboratory's Qt tools"
dependencies = [
    "qtpy>=2.4.1",
    "pandas>2.0",
    "numpy",
    "pyqtgraph>=0.13.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Florian Rau", email = "bimac@users.noreply.github.com"},
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "iblqt[doc, lint, test, typing]",
]
doc = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=4.0.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-autoapi>=3.3.0",
    "sphinx-qt-documentation>=0.4.1",
]
lint = [
    "ruff>=0.6.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
typing = [
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240807",
]

[tool.ruff]
include = ["pyproject.toml", "iblqt/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.per-file-ignores]
"src/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["iblqt/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
addopts    = "--cov=tycmd --cov-report=html --cov-report=xml"
minversion = "6.0"
testpaths  = [ "tests" ]
