[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "iblqt"
description = "A collection of extensions to the Qt framework."
dependencies = [
  "qtpy>=2.4.1",
  "pandas>2.0",
  "numpy",
  "pyqtgraph>=0.13.7",
  "ONE-api>=3.0.0",
]
keywords = ["pyqt", "qt", "pyside", "qtpy"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Florian Rau", email = "bimac@users.noreply.github.com"},
]
dynamic = ["version"]

[project.optional-dependencies]
pyqt5 = [
  "PyQt5",
  "PyQtWebEngine",
]
pyqt6 = [
  "PyQt6",
  "PyQt6-WebEngine",
]
pyside6 = [ "PySide6" ]

[project.urls]
Homepage = "https://github.com/int-brain-lab/iblqt/"
Documentation = "https://int-brain-lab.github.io/iblqt/"
Repository = "https://github.com/int-brain-lab/iblqt.git"
Issues = "https://github.com/int-brain-lab/iblqt/issues"
Changelog = "https://github.com/int-brain-lab/iblqt/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    {include-group = "doc"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typing"},
]
doc = [
  "sphinx>=7.0.0",
  "myst-parser>=4.0.0",
  "sphinx-autodoc-typehints>=2.3.0",
  "sphinx-qt-documentation>=0.4.1",
  "sphinx-rtd-theme>=2.0.0",
]
lint = [
  "ruff>=0.9.2",
]
test = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-qt>=4.4.0",
  "pytest-xvfb>=3.1.1",
  "tox>=4.23.2",
  "tox-uv>=1.26.1",
]
typing = [
  "mypy>=1.14.1",
  "pandas-stubs>=2.2.3.241126",
  "types-requests>=2.32.0.20241016",
  "PyQt5-stubs>=5.15.6.0",
]
ci = [
  "coveralls>=4.0.1",
  "pytest-github-actions-annotate-failures>=0.3.0",
]

[tool.uv]
constraint-dependencies = ["llvm>0.43.0", "numba>0.53.1"]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]
default-groups = []

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = [ "docs/source/api" ]
source-includes = [ "tests/*.py", "resources/", "docs/source/" ]

[tool.pdm.version]
source = "file"
path = "iblqt/__init__.py"

[tool.ruff]
include = ["pyproject.toml", "iblqt/**/*.py", "tests/**/*.py"]
exclude = ["iblqt/resources.py"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["D", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"] # pydocstyle

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [ "ibl*", "one*" ]

[tool.mypy]
packages = ["iblqt"]

[tool.pytest.ini_options]
addopts    = "--cov=iblqt"
minversion = "6.0"
testpaths  = [ "tests" ]

[tool.coverage.run]
source_pkgs = [ "iblqt" ]
relative_files = true

[tool.coverage.paths]
source = [
  "iblqt/",
  ".tox/py*/lib/py*/site-packages/iblqt/",
  ".tox/py*/Lib/site-packages/iblqt/"
]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = clean,typing,py{310,313}-{pyqt5,pyqt6,pyside6},report

[testenv]
no_default_groups = true
dependency_groups = test
runner = uv-venv-lock-runner

[testenv:py{310,313}-{pyqt5,pyqt6,pyside6}]
depends = clean
commands =
  pytest
  {env:POST_COMMAND:python --version}
dependency_groups =
  test
  {env:EXTRA_DEPS:}
extras=
  pyqt5: pyqt5
  pyqt6: pyqt6
  pyside6: pyside6
setenv =
  py310: PYTHON=py310
  py313: PYTHON=py313
  pyqt5: PYTEST_QT_API=pyqt5
  pyqt6: PYTEST_QT_API=pyqt6
  pyside6: PYTEST_QT_API=pyside6
  COVERALLS_FLAG_NAME={env:PLATFORM}_{env:PYTHON}_{env:PYTEST_QT_API}
  COVERAGE_FILE=.coverage.{env:PYTHON}.{env:PYTEST_QT_API}.xml
  QTWEBENGINE_CHROMIUM_FLAGS="--disable-gpu"
  QT_QPA_PLATFORM=offscreen
  QT_QUICK_BACKEND=software
  QT_OPENGL=software
passenv=
  DISPLAY
  XAUTHORITY
  COLUMNS
  GITHUB_*
  EXTRA_DEPS

[testenv:clean]
skip_install = true
commands =
  coverage erase

[testenv:typing]
skip_install = true
dependency_groups = typing
extras = pyqt5
commands = mypy --always-true=PYQT5 --always-false=PYQT6 --always-false=PYSIDE6

[testenv:report]
depends = py{310,313}-{pyqt5,pyqt6,pyside6}
skip_install = true
commands =
  coverage combine
  coverage html
"""
